# manifold

./: .editorconfig  .env.example  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .swcrc  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  supervisord.conf
backend/data/: manifold.db
backend/manifold/: cli.py  config.py  exceptions.py  main.py
backend/manifold/api/: _crypto.py  accounts.py  admin.py  alarms.py  auth.py  cards.py  connections.py  dashboard.py  deps.py  direct_debits.py  events.py  notification_deliveries.py  notifiers.py  providers.py  recurrence_profiles.py  settings.py  standing_orders.py  sync.py  transactions.py  users.py
backend/manifold/database/: base.py
backend/manifold/domain/: ownership.py  recurrence.py  sync_engine.py  users.py
backend/manifold/models/: __init__.py  alarm.py  base.py  card.py  event.py  notifier.py  pending_transaction.py  standing_order.py  transaction.py  user.py
backend/manifold/notifiers/: __init__.py  email.py
backend/manifold/providers/: exceptions.py  registry.py
backend/manifold/schemas/: connections.py  notifiers.py  providers.py  users.py
backend/manifold/tasks/: alarms.py  broker.py  maintenance.py  notifications.py  scheduler.py  sync.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_data_in.py  0003_alarms_notifiers.py  0004_user_names.py  0005_account_identity.py  (+2 more)
backend/tests/: conftest.py
(+338 files in other folders)
