[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "manifold"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0", "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22", "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0", "aiosqlite>=0.20.0",
    "pydantic-settings>=2.6.0", "pydantic>=2.10.0",
    "passlib[argon2]>=1.7.4", "python-jose[cryptography]>=3.3.0",
    "cryptography>=43.0.0", "structlog>=24.4.0",
    "taskiq>=0.11.0", "taskiq-redis>=0.5.0", "taskiq-fastapi>=0.3.0",
    "redis>=5.2.0", "httpx>=0.27.0", "click>=8.1.0",
    "python-multipart>=0.0.12", "jinja2>=3.1.0", "aiosmtplib>=3.0.0",
]

[project.optional-dependencies]
postgresql = ["asyncpg>=0.30.0"]
mariadb = ["asyncmy>=0.2.9"]
all-backends = ["asyncpg>=0.30.0", "asyncmy>=0.2.9"]

[project.scripts]
manifold = "manifold.cli:cli"

[tool.setuptools.packages.find]
include = ["manifold*"]

[tool.setuptools.package-data]
manifold = ["py.typed"]

[tool.setuptools_scm]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "pytest-cov>=5.0.0", "httpx>=0.27.0", "ruff>=0.8.0", "mypy>=1.13.0", "types-passlib"]
